cluster/config/certs/kyverno-copy-kube-home-certificate.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sync-kube-home-certificate
  annotations:
    policies.kyverno.io/title: Sync kube-home certificate from cert-manager to istio-system namespace
    policies.kyverno.io/subject: Secret
    policies.kyverno.io/minversion: 1.6.0
spec:
  rules:
  - name: sync-image-pull-secret
    match:
      any:
      - resources:
          kinds:
          - Namespace
    generate:
      apiVersion: v1
      kind: Secret
      name: star-kube-home-tls
      namespace: istio-system
      synchronize: true
      clone:
        namespace: cert-manager
        name: star-kube-home-tls
